Issue 3 Logger added instanzierbarkeit zu aufwändig

--- a/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine.vcxproj
+++ b/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine.vcxproj
@@ -139,7 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FrameWork\Logger_Import\loguru.cpp" />
     <ClCompile Include="friendly-octo-pancake-Engine.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FrameWork\Logger_Import\loguru.hpp" />
+    <ClInclude Include="FrameWork\Tester.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
