--- a/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine.vcxproj.filters
+++ b/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="friendly-octo-pancake-Engine.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="FrameWork\Logger_Import\loguru.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FrameWork\Tester.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameWork\Logger_Import\loguru.hpp">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
