--- a/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine.vcxproj
+++ b/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine.vcxproj
@@ -143,7 +143,11 @@
     <ClCompile Include="friendly-octo-pancake-Engine.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FrameWork\EventSystem\EventSystem.h" />
     <ClInclude Include="FrameWork\Logger_Import\loguru.hpp" />
+    <ClInclude Include="FrameWork\Singletons\baseSingletonFactory.h" />
+    <ClInclude Include="FrameWork\Singletons\baseSingleton.h" />
+    <ClInclude Include="FrameWork\Singletons\baseSingletonStorrage.h" />
     <ClInclude Include="FrameWork\Tester.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
