--- a/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine.vcxproj.filters
+++ b/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine/friendly-octo-pancake-Engine.vcxproj.filters
@@ -29,5 +29,17 @@
     <ClInclude Include="FrameWork\Logger_Import\loguru.hpp">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="FrameWork\EventSystem\EventSystem.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameWork\Singletons\baseSingleton.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameWork\Singletons\baseSingletonStorrage.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameWork\Singletons\baseSingletonFactory.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
