--- a/Vulkan/Test2/Test2/Test2.vcxproj
+++ b/Vulkan/Test2/Test2/Test2.vcxproj
@@ -177,6 +177,12 @@
     <None Include="FragmentShader.frag" />
     <None Include="VertexShader.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DepthImage.h" />
+    <ClInclude Include="EasyImage.h" />
+    <ClInclude Include="NonDependingFunktions.h" />
+    <ClInclude Include="stb_image.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
