--- a/Vulkan/Test2/Test2/Test2.vcxproj.filters
+++ b/Vulkan/Test2/Test2/Test2.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Headerdateien\nonVulcan">
+      <UniqueIdentifier>{0a0623fd-4c54-43c6-a35f-6a27ce27d79a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Test2.cpp">
@@ -20,23 +23,12 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shader\FragmentShader.frag" />
-    <None Include="Shader\VertexShader.vert" />
+    <None Include="VertexShader.vert" />
+    <None Include="FragmentShader.frag" />
+    <None Include="FragmentShader.frag" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NonDependingFunktions.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="stb_image.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="EasyImage.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="DepthImage.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="objLoader.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Vertex.h">
@@ -45,16 +37,19 @@
     <ClInclude Include="Mesh.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="pipeline.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="MeshHelper.h">
       <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Headerdateien\nonVulcan</Filter>
+    </ClInclude>
+    <ClInclude Include="objLoader.h">
+      <Filter>Headerdateien\nonVulcan</Filter>
     </ClInclude>
     <ClInclude Include="Renderer.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="Shader.h">
+    <ClInclude Include="glslReader.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
